# prust

./: .gitignore  Cargo.toml  Makefile.toml  README.md
src/: chat_message.rs  chatbox.rs  connect_box.rs  conversation.rs  event_bus.rs  lib.rs  main.rs  utils.rs  web_rtc.rs
src/components/: chat_message.rs  chatbox.rs  connect.rs  mod.rs
src/utils/: mod.rs  participants.rs  socket.rs
static/: chat.css  index.html  variables.css
