[package]
name = "prust"
version = "0.1.0"
authors = ["ImFlog <garcia.florian.perso@gmail.com>", "NugetChar <nugetchar@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"]}
serde = "1.0"
serde_derive = "1.0"
yew = "0.15"
web-sys = {version = "0.3.39", features = [
    "KeyEvent",
    "KeyboardEvent",
    "RtcConfiguration",
    "RtcPeerConnection",
    "RtcDataChannel",
    "RtcIceCandidate",
    "RtcIceServer"]}
js-sys = "0.3.40"

console_error_panic_hook = { version = "0.1.1", optional = true }