[package]
name = 'prust'
version = '0.1.0'
authors = ['ImFlog <garcia.florian.perso@gmail.com>', 'NugetChar <nugetchar@gmail.com>']
edition = '2018'

[dependencies]
log = '0.4'
wasm-logger = '0.2'
wasm-bindgen = { version = '0.2.63', features = ['serde-serialize'] }
serde = '1.0'
serde_json = '1.0.55'
yew = '0.15'
js-sys = '0.3.40'

console_error_panic_hook = { version = '0.1.1', optional = true }

[dependencies.web-sys]
version = '0.3.39'
features = [
    'KeyEvent',
    'KeyboardEvent',
    'RtcConfiguration',
    'RtcPeerConnection',
    'RtcDataChannel',
    'RtcDataChannelState',
    'RtcDataChannelInit',
    'RtcIceCandidate',
    'RtcIceCandidateInit',
    'RtcIceServer',
    'RtcPeerConnectionIceEvent',
    'RtcSessionDescription',
    'RtcSdpType',
    'RtcSessionDescription',
    'RtcSessionDescriptionInit',
    'RtcSignalingState',
    # Websocket part
    'WebSocket',
    'MessageEvent',
    'ProgressEvent',
]
